--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,20 @@ h1 {
 .card > img {
   padding: 10px;
 }
+#layover {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+.card {
+  cursor: pointer;
+}
