--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,25 @@ h1 {
   gap: 3rem;
 }
 .card {
-  cursor: pointer;
   width: 90%;
-  position: relative;
+
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: 0.5s ease;
+  cursor: pointer;
 }
+.card:hover {
+  transform: rotate(10deg);
+}
+
+.card img {
+  max-width: 100%;
+  height: auto;
+  transition: 0.5s ease;
+}
+
 #overlayImage {
   max-width: 80%;
   max-height: 80%;
-  object-fit: contain;
 }
